--- a/src/components/search-result/search-result.html
+++ b/src/components/search-result/search-result.html
@@ -11,5 +11,15 @@
             {{user.bio}}
           </p>
         </ion-card-content>
+        <ion-row no-padding>
+          <ion-col>
+            <button ion-button clear small color="danger" icon-start>
+              <ion-icon name='search' (click)="getInfo()"></ion-icon>
+              Detail
+            </button>
+          </ion-col>
+          
+          
+        </ion-row>
       </ion-card>
 </div>
